@@ -1,5 +1,6 @@
 Progression 0.4.0
   Added On Eaten Trigger
+  Addd On Achievement Trigger
   Can drag the mouse to scroll through the tree editor
   Only display links when criteria are in the same tab
   Speed will now work on negative speeds, as well as not require sprint pressing
